# Q-Base-by-MVS-Final

./: .gitignore  LICENSE.txt  Q-algofest-proof.bat  Q-demo-record.bat  Q-launch.bat  QB-doctor.bat  README.md  START_HERE.md  ccbs-clean  ccbs-clean.cmd  ccbs-clean.ps1  pyproject.toml  validate_qb_multi_instance.ps1
.github/ISSUE_TEMPLATE/: algofest-demo-200-tasks.md
automation/: capture_ui_demo.mjs  package-lock.json  package.json
config/: codex_instances.json  codex_instances_10.json  multi_instance_profile.json  vscode-extensions.txt
docs/: DEMO_TASKLIST_200.md  IMPACT_ONE_PAGER.md  ONE_JOB.md  VIDEO_RECORDING_OBS.md
docs/algofest/: DECK_OUTLINE_8_SLIDES.md  DEVPOST_WRITEUP_DRAFT.md  FINAL_QB_DEMO_VIDEO_SCRIPT_AUTOMATION_AI.md  INDEX.md  PROJECT_PAGE_DETAILS.md  RULE_COMPLIANCE.md  SHOTLIST.md  SUBMISSION_CHECKLIST.md  SUBMISSION_PLAN.md  TASK_SCALE_AND_CONCURRENCY.md  TECHNOLOGIES_USED.md  VIDEO_SCRIPT_4M20S.md
docs/gallery/: README.md
examples/: README.md  sample_project.json
scripts/: algofest_submission_smoke.ps1  automate_demo.ps1  codex_multi_manager.ps1  demo_prep.ps1  qb_doctor.ps1  qb_quantum_multi_instance.ps1  set_qb_api_token.ps1
src/ccbs_app/: __init__.py  ai_api.py  ai_audit.py  ai_auth.py  ai_codex_integration.py  ai_hybrid.py  ai_index2.py  ai_ingest.py  ai_keyring.py  ai_local.py  ai_model_catalog.py  ai_models.py  ai_packs.py  ai_perf.py  ai_plugins.py  ai_prompt_pack.py  ai_quota.py  cli.py  (+32 more)
tests/: test_ai3_foundry_pane.py  test_ai_auth_plugin_and_cli_surface.py  test_multi_instance_agent.py  test_multi_instance_api_surface.py
(+57 files in other folders)
