[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-base-by-mvs"
version = "0.2.0"
description = "Q-Base by MVS: local-first multi-instance orchestration runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "MVS" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "python-multipart==0.0.9",
  "keyring>=25.0.0",
  "PyYAML>=6.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
assignment = [
  "Pillow>=10.0.0",
  "python-docx>=1.1.0",
  "python-pptx>=0.6.23",
]

[project.scripts]
ccbs-clean = "ccbs_app.cli:main"
ccbs-clean-pro = "ccbs_pro:cli"
ccbs-clean-qol = "ccbs_app.qol_toolkit:main"

[tool.setuptools]
py-modules = ["ccbs_pro"]

[tool.setuptools.packages.find]
where = ["src"]
